<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ProductDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edit_product_quantity"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_product_quantity"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/label_weight_units"
                        style="@style/EditorUnitsStyle"
                        android:text="@string/unit_product_weight" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/quantity_add_buttonId"
                        style="@style/EditorFieldStyle"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="@dimen/buttons_margin"
                        android:text="+" />

                    <Button
                        android:id="@+id/quantity_subtract_buttonId"
                        style="@style/EditorFieldStyle"
                        android:layout_width="wrap_content"
                        android:text="-" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Price category -->
        <LinearLayout
            android:id="@+id/container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_price" />

            <!-- Input field -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingLeft="4dp">

                <!-- Gender drop-down spinner -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_weight_money"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_product_dollars" />

            </RelativeLayout>
        </LinearLayout>

        <!-- Supplier category -->
        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_supplier" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_product_supplier"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_supplier"
                    android:inputType="textCapWords" />

                <Button
                    android:id="@+id/order_moreButtonId"
                    style="@style/EditorFieldStyle"
                    android:layout_gravity="center"
                    android:text="Order more" />
            </LinearLayout>
        </LinearLayout>

        <!-- Image category -->
        <LinearLayout
            android:id="@+id/supplierContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_image" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Weight field -->
                <Button
                    android:id="@+id/selectImageButtonId"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_image" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView style="@style/CategoryStyle" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <ImageView
                    android:id="@+id/productImageId"
                    android:layout_width="@dimen/product_image_size"
                    android:layout_height="@dimen/product_image_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:paddingLeft="4dp"
                    android:scaleType="centerCrop"
                    android:visibility="visible" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>